--- a/Login_evaluator.html
+++ b/Login_evaluator.html
@@ -14,7 +14,8 @@
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
         
-            fetch("http://localhost:3000/login", {
+            const API_BASE_URL = "https://smart-vote.vercel.app"; 
+            fetch(`${API_BASE_URL}/login`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ username, password }) // 🔥 Removed city
