--- a/terms.html
+++ b/terms.html
@@ -13,31 +13,71 @@
             background-color: beige;
         }
         .container {
-            width: 80%;
+            width: 90%;
+            max-width: 800px;
             margin: 50px auto;
             background: snow;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
-        h1, h2 {
-            color: #333;
-        }
-        p{
-            color: #555;
-            line-height: 1.6;
-        }
-        h1{
+        h1 {
             text-align: center;
-            color: wheat;
+            color: white;
             background-color: #005df4;
-            display: block;
-            height: 35px;
-            width: 1200px;
             padding: 15px;
+            font-size: 24px;
+            border-radius: 5px;
+            box-sizing: border-box;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto 20px auto;
         }
-        a{
+        h2 {
+            color: #333;
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+        p {
+            color: #555;
+            line-height: 1.8;
+            margin-bottom: 15px;
+        }
+        a {
             text-decoration: none;
+            color: #005df4;
+        }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+                padding: 15px;
+            }
+            h1 {
+                font-size: 20px;
+                padding: 12px;
+            }
+            h2 {
+                font-size: 18px;
+            }
+            p {
+                font-size: 14px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 18px;
+                padding: 10px;
+            }
+            h2 {
+                font-size: 16px;
+            }
+            p {
+                font-size: 13px;
+            }
         }
     </style>
 </head>
@@ -58,7 +98,7 @@
         <p>We reserve the right to terminate or suspend access to our service at any time, without prior notice.</p>
         
         <h2>5. Contact Us</h2>
-        <p>If you have any questions about these Terms and Conditions, please contact us at <a href="mailto:mesagnik279@gmail.com">mesagnik279@gmail.com</a></p>
+        <p>If you have any questions about these Terms and Conditions, please contact us at <a href="mailto:mesagnik279@gmail.com">Click to Email</a></p>
     </div>
 </body>
 </html>
