--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <p>Choose your Operating System</p>
                     <li class="OS"><i class="fa-brands fa-android"></i>&nbsp;&nbsp;<a href="working.html">Android</a></li>
-                    <li class="OS"><i class="fa-brands fa-apple"></i>&nbsp;&nbsp;<a href="working.html">Apple Os</a></li>
+                    <li class="OS"><i class="fa-brands fa-apple"></i>&nbsp;&nbsp;<a href="working.html">macOS</a></li>
                     <li class="OS"><i class="fa-brands fa-windows"></i>&nbsp;&nbsp;<a href="working.html">Windows</a></li>
                 </ul>
             </div>
@@ -79,13 +79,13 @@
                 <div class="htw-body">
                         <ul>
                             <li>
-                                <b>Step 1: Upload Voter's EPIC number</b>
+                                <b>Step 1: Evaluator log into the portal</b>
                                 Evaluator uploads their username and password if they exists in our database.
                                 Then the system extracts and verifies the evaluator and takes to the voter authentication process.
                             </li>
                             <li>
                                 <b>Step 2: Validate Voter Details</b>
-                                The extracted details (name, Father name, city, etc.) are cross-checked 
+                                Evaluator enters voter's EPIC number then the extracted details (name, Father name, city, etc.) are cross-checked 
                                 against the official election database.
                                 If discrepancies are found, users will be notified to re-upload or correct their details.
                             </li>
