--- a/Details-about-us.html
+++ b/Details-about-us.html
@@ -5,8 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Riders</title>
     <link rel="icon" href="tech_riders_logo.jpg">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #333;
+        }
+        .logo {
+            width: 150px;
+            height: auto;
+            margin-bottom: 20px;
+        }
+        .team {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .member {
+            background: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
-    <center><p style="position:relative; top:200px; left:3pc; font-size:50px;">Sorry we are currently working on this💻</p></center>
+    <div class="container">
+        <img src="tech_riders_logo.jpg" alt="Tech Riders Logo" class="logo">
+        <h1>We are Tech Riders</h1>
+        <div class="team">
+            <div class="member">Sagnik Saha</div>
+            <div class="member">Rayaan Alam</div>
+            <div class="member">Zeeshan Akhtar</div>
+            <div class="member">Aayan Siddiquee</div>
+        </div>
+    </div>
 </body>
 </html>
