--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,699 +1,123 @@
-body{
-    margin: 0;
-    padding: 0;
-    background-color: beige;
-}
-.header .quote{
-    background-color: #0050D4;
-    display: block;
-    color: white;
-    height: 7rem;
-    padding: 20px 0px 8px 5px;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+    <link rel="icon" href="tech_riders_logo.jpg">
+    <style>
+        /* Ensure no extra spacing on the right */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
+        body {
+            font-family: Arial, sans-serif;
+            background-color: beige;
+            width: 100%;
+            overflow-x: hidden; /* Prevent horizontal scroll */
+        }
 
-/*Download icons*/
-#icon{
-    display: flex;
-    float:right;
-    margin-right: 20px;
-    border-radius: 40%;
-    background-color: #0050D4;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 60px;  
-    width: 60px;
-}
-.download-icon-close{
-    display: flex;
-    align-items: center;
-    justify-content: space-between; /* Ensures space between elements */
-    width: 98%; /* Adjust width as needed */
-}
-.download-icon-close button{
-    border-radius: 15px;
-    margin-right: 5px;
-    font-size: 25px;
-    border: none;
-    background-color: #0bece4;
-    color: black;
-    font-weight: bolder;
-}
-.download-icon-close button:hover{
-    box-shadow: 2px 2px 10px black;
-    color: seashell;
-}
-.download-options{
-    height: 450px;
-    width: 600px;
-    background-color: #0bece4;
-    position: absolute;
-    top: 5px;
-    left: 30%;
-    transform:scale(0);
-}
-.download-options.active{
-    transform: scale(1);
-    opacity: 0.9;
-}
-.download-options h1{
-    text-align: center;
-    color: #000;
-}
-.download-options p{
-    margin-right: 90px;
-    color: #000;
-}
-.download-options li{
-    list-style: none;
-}
-.download-options .OS{
-    height: 30px;
-    width: 100px;
-    background-color: black;
-    margin-left: 180px;
-    margin-top: 35px;
-    padding: 13px 20px;
-    border-radius: 30px;
-}
-.OS:hover{ 
-    background-color: #06da62;
-    color: black;
-}
-.download-options .OS a{
-    text-align: center;
-    color: white;
-    text-decoration: none;
-}
-/*--------Download icon Ends-------*/
+        .container {
+            width: 90%;
+            max-width: 800px;
+            padding: 20px;
+            background: white;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            margin: 20px auto;
+        }
 
-.header .quote button:hover{
-    background-color: black;
-    box-shadow: 2px 2px 10px black;
-}
-.header .quote button .fa-download{
-    color: white;
-    font-size: x-large;
-    font-weight: bolder;
-}
-.header .quote h2{
-    font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 6px 0px 0px 6px;
-}
-.header .quote p{
-    font-family: 'didot','Bodoni MT';
-    font-style: italic;
-    text-align: center;
-    font-size: large;
-    margin-top: 25px;
-    margin-left: 50px;
-}
-.header .container ul{
-    list-style: none;
-    text-align: center;
-    padding: 0;
-    margin: 0px;
-    background-color: #1062e5;
-}
-.header .container ul li{
-    display: inline-block;
-}
-.header .container ul li a{
-    display: block;
-    text-decoration: none;
-    padding: 20px;
-    font-size: large;
-    font-weight: bolder;
-    color: white;
-}
-.header .container ul li a:hover{
-    color: #003366;
-    background-color: gold;
-}
+        h1 {
+            text-align: center;
+            color: white;
+            background-color: #005df4;
+            padding: 15px;
+            font-size: 24px;
+            border-radius: 5px;
+            width: 100%;
+        }
 
-/*Main Content*/
-.main .main-container{
-    height:250px;
-    width: 90%;
-    margin: 30px 0px 0px 50px;
-    border-radius: 30px;
-    background-color:#5E60CE;
-    box-shadow: 1px 2px 10px black;
-    text-align: center;
-    padding: 30px 5px 10px 5px;
-}
-.main .main-container:hover{
-    box-shadow: 4px 4px 12px black;
-}
-.main .main-container p{
-    font-family:'didot','Bodoni MT';
-    color: #FFF;
-    font-size: large;
-    padding: 10px;
-}
-.main .main-container h1{
-    color:#DFF6FF;
-    font-weight: bolder;
-    text-transform: capitalize;
-}
-.main .main-container button{
-    margin: 20px 10px 10px 10px;
-    font-size: 30px;
-    border-radius: 30px;
-    background-color: #FFD700;
-}
-.main .main-container button:hover{
-    box-shadow: 2px 2px 10px black;
-    background-color: #ffd900e8;
-}
-.main .main-container button a{
-    text-decoration: none;
-    color: black;
-    text-align: center;
-    font-family: 'monaco','perpetua','times new roman';
-    padding: 5px;
-}
+        h2 {
+            color: #333;
+        }
 
+        p {
+            line-height: 1.6;
+            color: #666;
+        }
 
-/*------------------annonucement-------------------------*/
-.announcement{
-    height: 80px;
-    width: 100%;
-    background-color:#D4B996;
-    margin-top: 80px;
-    transform: scale(1);
-}
-.announcement h1{
-    text-align: center;
-    color:  #2D2B28;
-    padding-top: 5px;
-}
-.announcement marquee{
-    background-color:  #D4B996;
-    color:  #2D2B28;
-    font-size: 25px;
-    padding-bottom: 8px;
-}
-.announcement marquee a{
-    text-decoration: none;
-    color: black;
-}
+        a {
+            text-decoration: none;
+            color: #005df4;
+        }
 
+        p:last-child {
+            margin-bottom: 0;
+        }
 
-/*How It Works*/
-.how-it-works #htw-button{
-    font-size: 20px;
-    border-radius: 30px;
-    padding: 8px 16px;
-    margin: 80px 0px 0px 652px;
-}
-.how-it-works #htw-button:hover{
-    box-shadow: 2px 2px 10px black;
-    transition: box-shadow 1.5s 0.1ms ease-in-out;
-    border: 2px solid black;
-}
-.htw-content{
-    position:fixed;
-    top:50%;
-    left: 50%;
-    /*hiding the details*/
-    transform: translate(-50%,-50%) scale(0);
-    transition: 300ms ease-in-out;
-    border: 2px solid black;
-    border-radius: 20px;
-    z-index: 10;
-    background-color: white;
-    width: 900px;
-    max-width: 90%;
-}
-.htw-content.active{
-    transform: translate(-50%,-50%) scale(1);
-}
-.htw-header{
-    padding: 10px 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid black;
-}
-.htw-header h1{
-    color:#0050D4;
-}
-.htw-content .htw-header .close-htw-button{
-    cursor: pointer;
-    border: none;
-    outline: none;
-    background:none;
-    font-size: 28px;
-    font-weight: bolder;
-    margin-right: 20px;
-}
-.htw-content .htw-body{
-    padding: 10px 15px;
-}
-#overlay{
-    position: fixed;
-    opacity: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;    
-    transition: 300ms ease-in-out;
-    background-color: rgba(0,0,0,.6);
-    pointer-events: none;    
-}
-#overlay.active{
-    opacity: 1;
-    pointer-events: all;
-}
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+                padding: 15px;
+            }
+            h1 {
+                font-size: 20px;
+                padding: 12px;
+            }
+            h2 {
+                font-size: 18px;
+            }
+            p {
+                font-size: 14px;
+            }
+        }
 
-/*key features*/
-.key-features{
-    display: flex;
-    justify-content: space-evenly;
-}
-.key-features .key-containers{
-    height: 250px;
-    width: 400px;
-    padding: 1px;
-    border-radius: 15px;
-    border: 2px solid black;
-    background-color: white;
-    margin-bottom: 50px;
-}
-.key-containers p{
-    padding: 15px;
-}
-.key-features h1{
-    text-align: center;
-}
-.key-features h3{
-    text-align: center;
-    text-decoration: underline;
-}
-#line{
-    width: 100%;
-    height: 1px;
-    background-color: #000;
-}
-#kf{
-    text-align: center;
-    margin-top: 95px;
-    margin-bottom: 50px;
-    color: #0050D4;
-    font-size: 40px;
-    font-weight: bolder;
-}
-.key-features .key-containers:hover{
-    box-shadow: 2px 2px 10px black;
-    transition: box-shadow 1s 0.1ms ease-in-out;
-}
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 18px;
+                padding: 10px;
+            }
+            h2 {
+                font-size: 16px;
+            }
+            p {
+                font-size: 13px;
+            }
+            #date{
+                font-size: 8px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Privacy Policy</h1><br>
+        <p style="text-align: end;" id="date">Effective Date: 01/05/2025</p>
 
-/*------our vision--------*/
-.our-vision img{
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
-    margin: 55px 0px 0px 655px;
-}
-.our-vision img:hover{
-    border: 2px solid black;
-    transition: border 0.1s 0.4ms ease-in-out;
-}
-.our-vision h1{
-    color: #0050D4;
-    margin-left: 670px;
-    font-size: 40px;
-    font-weight: 100px;
-}
-.our-vision .our-aims{
-    display: flex;
-    justify-content: space-evenly;
-}
-.our-vision .our-aims .aims{
-    height: 250px;
-    width: 350px;
-    background-color: white;
-    border: 2px solid black;
-    border-radius: 15px;
-}
-.our-vision .our-aims .aims h3{
-    color: #0050D4;
-    text-align: center;
-}
-.our-vision .our-aims .aims p{
-    padding: 8px 16px;
-}
-.our-vision .our-aims .aims:hover{
-    box-shadow: 2px 2px 10px black;
-    transition: box-shadow 1s 0.2ms ease-in;
-}
+        <h2>1. Introduction</h2><br>
+        <p>Welcome to our service. We are committed to protecting your privacy. This Privacy Policy 
+            explains how we collect, use, and safeguard your information.</p><br>
 
+        <h2>2. Information We Collect</h2><br>
+        <p>We collect personal information that you provide directly to us, 
+            such as your name, email, and other details when you use our services.</p><br>
 
-/*------service provided*/
-.service-provided{
-    height: 195px;
-    width: 80%;
-    margin: 150px 150px;
-    background-color: white;
-    border: 2px solid black;
-    border-radius: 20px;
-}
-.service-provided:hover{
-    box-shadow: 2px 2px 10px black;
-    transition: box-shadow 1s 0.2ms ease-in-out;
-}
-.service-provided h2{
-    font-size: 30px;
-    color: #0050D4;
-    margin-bottom: -20px;
-    text-align: center;
-    font-family: 'Times New Roman','serif';
-}
-.service-provided .service-list ul{
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
-    font-size: 20px;  
-}
-.service-provided .service-list ul li h4{
-    text-align: center;
-    color: #0050D4;
-    margin-bottom: -8px;
-}
+        <h2>3. How We Use Your Information</h2><br>
+        <p>We use your information to provide, improve, and personalize our services, as well as to communicate with you.</p><br>
 
+        <h2>4. Data Security</h2><br>
+        <p>We take reasonable measures to protect your personal data from unauthorized access, disclosure, alteration, and destruction.</p><br>
 
-/*--------feedback--------*/
-.feedback-form{
-    margin: 50px 38%;
-}
-.feedback-form .chat #feedback{
-    font-size: 25px;
-    border:2px solid black;
-    border-radius: 15px;
-    background-color: gray;
-    color: whitesmoke;
-}
-.feedback-form .chat #feedback:hover{
-    background-color: rgba(118, 118, 118, 0.574);
-}
-.feedback-form .chat{
-    display: flex;
-    justify-content: space-between;
-}
-.feedback-form .chat button{
-    background-color: gray;
-    border: none;
-    border-radius: 10px;
-    margin-left: 5px;
-    font-size: 17px;
-    border:2px solid black;
-}
-.feedback-form .chat button:hover{
-    background-color: rgba(118, 118, 118, 0.574);
-}
-.feedback-form .chat #feedback::placeholder{
-    color: #DFF6FF;
-    padding: 15px;
-}
+        <h2>5. Changes to This Policy</h2><br>
+        <p>We may update our Privacy Policy from time to time. Any changes will be posted on this page.</p><br>
 
-/*FOOTER*/
-.footer{
-    height:210px;
-    width: 100%;
-    background-color: #0050D4;
-    margin-top: 130px;
-}
-.footer h2{
-    color: gold;
-    font-size: 30px;
-    font-weight: 100px;
-    padding: 50px 10px 0px 10px;
-}
-.footer p{
-    padding: 18px 10px 0px 10px;
-    color: white;
-}
-.footer #own-saying{
-    text-align: center;
-    margin-left: 380px;
-    font-size:medium;
-    padding-bottom: 8px;
-}
-.footer #own-saying .color-tech-riders a{
-    color: gold;
-    text-decoration: none;
-}
-.footer .footer-links{
-    float: right;
-    
-}
-.footer .footer-links a{
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    padding-right:20px;
-    position: relative;
-    bottom: 78px;
-    right:20px;
-}
-.footer .footer-links a:hover{
-    color:gold;
-}
-
-
-
-
-/* ---custom scrollbar--- */
-::-webkit-scrollbar{
-    width: 15px;
-}
-::-webkit-scrollbar-track{
-    background: #d1e5ff;
-    border-radius: 10px;
-}
-::-webkit-scrollbar-thumb{
-    background: linear-gradient(#1febee,#0050D4,#003366);
-    border-radius: 7px;
-}
-
-@media screen and (max-width: 1002px) {
-    /* General Styles to Ensure Wrapping */
-    * {
-        box-sizing: border-box;
-        word-wrap: break-word;
-    }
-
-    body {
-        overflow-x: hidden;
-    }
-
-    /* Header */
-    .header .quote, 
-    .header .container ul {
-        flex-wrap: wrap;
-        text-align: center;
-    }
-    .header .container ul li {
-        display: block;
-        width: 100%;
-    }
-    .how-it-works #htw-button {
-        display: block;
-        margin: 50px auto; /* Centers the button horizontally */
-        text-align: center;
-    }
-    /* Download Icons */
-    .download-options {
-        width: 90%;
-        left: 5%;
-        height: auto;
-        padding: 20px;
-    }
-
-    /* Main Container */
-    .main .main-container {
-        width: 95%;
-        margin: 20px auto;
-        padding: 20px;
-        text-align: center;
-    }
-    .main .main-container button {
-        display: block;
-        margin: 20px auto; /* Centers the button */
-    }
-
-    /* Announcement */
-    .announcement {
-        height: auto;
-        padding: 10px;
-    }
-
-    /* Key Features */
-    .key-features {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .key-features .key-containers {
-        width: 90%;
-        height: auto; /* Increases height dynamically */
-        margin: 50px auto;
-        padding: 20px;
-        text-align: center;
-    }
-
-    /* Our Vision */
-    .our-vision img {
-        display: block;
-        margin: 20px auto;
-    }
-
-    .our-vision h1 {
-        text-align: center;
-        margin: 10px auto;
-    }
-
-    .our-vision .our-aims {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .our-vision .our-aims .aims {
-        width: 90%;
-        margin-bottom: 20px;
-        height: auto;
-    }
-    
-    /* Services Provided */
-    .service-provided {
-        width: 90%;
-        height: auto; /* Increases height dynamically */
-        margin: 50px auto;
-        padding: 20px;
-        text-align: center;
-    }
-
-    .service-provided .service-list ul {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .service-provided .service-list ul li {
-        margin-bottom: 15px; /* Adds spacing between items */
-    }
-
-    /* Feedback Form */
-    .feedback-form {
-        width: 90%;
-        margin: 20px auto;
-        text-align: center;
-    }
-
-    .feedback-form .chat {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .feedback-form .chat #feedback {
-        width: 100%;
-        margin-bottom: 15px;
-    }
-    .feedback-form .chat button{
-        margin-top: 10px;
-    }
-    /* Footer */
-    .footer {
-        height: auto;
-        padding: 20px 10px;
-        text-align: center;
-    }
-
-    .footer h2 {
-        font-size: 24px;
-        padding: 20px 0 10px 0;
-    }
-
-    .footer p {
-        font-size: 16px;
-        padding: 5px;
-    }
-
-    .footer #own-saying {
-        margin-left: 0;
-        text-align: center;
-        font-size: 14px;
-        padding-bottom: 10px;
-    }
-
-    .footer .footer-links {
-        float: none;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 10px;
-        padding: 10px 0;
-        margin-top: 50px;
-    }
-
-    .footer .footer-links a {
-        font-size: 16px;
-        padding: 5px 10px;
-        display: inline-block;
-    }
-}
-@media screen and (max-width: 999px){
-    .download-options {
-        width: 95%;
-        left: 2.5%;
-        top: 10px;
-        padding: 15px;
-        text-align: center;
-    }
-
-    .download-options h1 {
-        font-size: 18px;
-        word-wrap: break-word;
-    }
-
-    .download-options p {
-        font-size: 14px;
-        margin: 5px auto;
-        padding: 5px;
-        max-width: 90%;
-        text-align: center;
-    }
-
-    .download-options .OS {
-        width: 90%;
-        max-width: 200px; /* Ensures button doesn't overflow */
-        margin: 10px auto;
-        font-size: 14px;
-        padding: 10px;
-        text-align: center;
-    }
-
-    .download-options .OS a {
-        font-size:12px;
-        margin-bottom: 2px;
-        padding: 3px;
-        text-overflow: ellipsis;
-    }
-}
-@media screen and (max-width: 625px) {
-    .header .quote p {
-        display: none;
-    }
-    .main .main-container p{
-        display: none;
-    }
-}
-@media screen and (max-width:407px) {
-    .main .main-container{
-        height: auto;
-    }
-}
+        <h2>6. Contact Us</h2><br>
+        <p>If you have any questions about this Privacy Policy, 
+            please contact us at <a href="mailto:mesagnik279@gmail.com">Click To Email</a>.</p><br>
+    </div>
+</body>
+</html>
